[package]
name = "aestunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm-siv = "0.11.1"
bincode = "1.3.3"
flume = "0.10.14"
local-ip-address = "0.5.3"
log = "0.4.19"
rand = "0.8.5"
rand_core = "^0.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_bytes = "0.11.9"
tokio = { version = "1.29.1", features = ["full"] }
trust-dns-resolver = "0.22.0"
url = "2.4.0"
x25519-dalek = "1.2.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"
