[package]
name = "strands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[dependencies]
aes-siv = "0.7.0"
flume = "0.10.14"
postcard = { version = "1.0.6", features = ["alloc"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = { version = "0.9.2", features = ["serde", "sha2"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.30.0", features = ["full"] }
tracing = "0.1.37"
trust-dns-resolver = { version = "0.22.0", features = ["system-config"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
tracing-subscriber = "0.3.17"
